# ubevt

./: CMakeLists.txt  CMakePresets.json
test/: CMakeLists.txt
test/test_dbi/: CMakeLists.txt  test_dbi.sh
test/test_fcl/: CMakeLists.txt  test_fcl_ubevt.sh
ubevt/: CMakeLists.txt
ubevt/CalData/: CMakeLists.txt  CalWireInvert_module.cc  CalWireMicroBooNE_module.cc  CalWireROI_module.cc  CalWireZS_module.cc  DumpOpDetGeoMicroBooNE_module.cc  ROIAlg.h  RawDigitAndWireComparisonAlg.cxx  RawDigitAndWireComparisonAlg.h  RawDigitAndWireComparison_module.cc  RawDigitFilterUBooNE_module.cc  ShowWire_module.cc  TestCFI_module.cc  run_calwirezs.fcl
ubevt/CalData/DeconTools/: BaselineMostProbAve_tool.cc  BaselineStandard_tool.cc  BaselineWaveformProperties_tool.cc  CMakeLists.txt  IDeconvolution.h  MCC7Deconvolution_tool.cc  NoBaseline_tool.cc  NoDeconvolution_tool.cc  ROIDeconvolution_tool.cc  ROIFinderDifferential_tool.cc  ROIFinderMorphological_tool.cc  ROIFinderStandard_tool.cc  WaveformPropertiesAlg.cxx  WaveformPropertiesAlg.h
ubevt/CalData/MicrobooneResponseFile/: CMakeLists.txt  MicrobooneResp_module.cc
ubevt/CalData/NoiseFilterAlgs/: CMakeLists.txt  RawDigitCharacterizationAlg.cxx  RawDigitCharacterizationAlg.h  RawDigitCorrelatedCorrectionAlg.cc  RawDigitCorrelatedCorrectionAlg.h  RawDigitFFTAlg.cxx  RawDigitFFTAlg.h  RawDigitFilterAlg.cxx  RawDigitFilterAlg.h
ubevt/CalData/test/: simwire_uboone.fcl
ubevt/DataOverlay/: CMakeLists.txt
ubevt/DataOverlay/DataOverlay/: CMakeLists.txt  CRTMixer.cxx  CRTMixer.h  OpDetWaveformMixer.cxx  OpDetWaveformMixer.h  RawDigitMixer.cxx
ubevt/DataOverlay/DataOverlayMixer/: CMakeLists.txt  OverlayRawDataMicroBooNE_module.cc  RawDigitOverlayMicroBooNEAna_module.cc  RetrieveOverlayDataMicroBooNE_module.cc  generate_neutrinos_nonoise.fcl  microboone_overlay.fcl
ubevt/DataOverlay/DataOverlayValidation/: CMakeLists.txt  MaskingOutUnavailableCRT.fcl  MaskingOutUnavailableCRT_module.cc  OverlayValidation_module.cc  ZeroingOutBadChannels.fcl  ZeroingOutBadChannelsAna.fcl  ZeroingOutBadChannelsAna_module.cc  ZeroingOutBadChannels_module.cc  run_MaskingOutUnavailableCRT.fcl  run_ZeroingOutBadChannels.fcl  run_ZeroingOutBadChannelsAna.fcl
ubevt/DataOverlay/DataPreOverlay/: CMakeLists.txt  CRTpreOverlay.fcl  CRTpreOverlay_module.cc  ZeroingOutBadChannelsAna_module.cc  ZeroingOutBadChannels_module.cc  run_CRTpreOverlay.fcl  run_ZeroingOutBadChannels.fcl  run_ZeroingOutBadChannelsAna.fcl
ubevt/DataOverlay/GenInfoMixer/: CMakeLists.txt  G4InfoMixerLocal_module.cc  GenInfoMixerLocal_module.cc  RawDigitsOverlayFilter_module.cc  SimInfoOverlayFilterGenG4_module.cc  SimInfoOverlayFilter_module.cc  SubRunPOTInEvent_module.cc  microboone_siminfomixer.fcl
ubevt/Database/: CMakeLists.txt  CRTChannelStatusService.h  ElectronLifetimeProvider.h  LightYieldProvider.h  LightYieldScalingProvider.cxx  LightYieldScalingProvider.h  LightYieldService.h  TestDBI_module.cc  UBElectronLifetimeProvider.h  UBElectronLifetimeService.h  UbooneCRTChannelStatusService_service.cc  UbooneCalibrationServiceHelper.h  UbooneChannelStatusService_service.cc  UbooneDetPedestalService_service.cc  UbooneElectronLifetimeContainer.h  UbooneElectronLifetimeProvider.cxx  UbooneElectronLifetimeProvider.h  UbooneElectronLifetimeService.cc  UbooneElectronLifetimeService.h  UbooneElectronLifetimeService_service.cc  UbooneElectronicsCalibProvider.cxx  UbooneElectronicsCalibProvider.h  UbooneElectronicsCalibService_service.cc  UbooneLightYieldProvider.cxx  UbooneLightYieldProvider.h  UbooneLightYieldService_service.cc  UboonePmtGainProvider.cxx  UboonePmtGainProvider.h  UboonePmtGainService_service.cc  WireCellChannelStatusProvider.cxx  WireCellChannelStatusProvider.h  WireCellChannelStatusService_service.cc  database_microboone.fcl  test_dbi.fcl
ubevt/Database/TPCEnergyCalib/: CMakeLists.txt  UboonePlaneCorrectionProvider.cxx  UbooneTPCEnergyCalibProvider.cxx  UbooneTPCEnergyCalibService_service.cc  UboonedqdxCorrectionProvider.cxx
ubevt/Database/write_scripts/: db_read_write.py
ubevt/SpaceCharge/: CMakeLists.txt  SCECorrReco_module.cc  ShiftEdepSCE_module.cc  SpaceChargeMicroBooNE.cxx  SpaceChargeMicroBooNE.h  SpaceChargeMicroBooNETestHelpers.h  spacecharge_microboone.fcl
ubevt/SpaceChargeServices/: CMakeLists.txt  SpaceChargeServiceMicroBooNE.cc  SpaceChargeServiceMicroBooNE.h  SpaceChargeServiceMicroBooNE_service.cc
ubevt/Utilities/: CMakeLists.txt  ChannelStatusAna_module.cc  FileCatalogMetadataMicroBooNE.cc  FileCatalogMetadataMicroBooNE_service.cc  OpHitRemapProducer_module.cc  PMTRemapProvider.cxx  PMTRemapProvider.h  PMTRemapService.cc  PMTRemapService.h  PMTRemapService_service.cc  RandomPrescale_module.cc  SignalShapingServiceMicroBooNE.cc  SignalShapingServiceMicroBooNE.h  SignalShapingServiceMicroBooNE_service.cc  SpacePointSolver_microboone.fcl  TFileMetadataMicroBooNE.cc  TFileMetadataMicroBooNE.h  TFileMetadataMicroBooNE_service.cc  TinyHitFinderAna_module.cc  detectorclocks_microboone.fcl  detectorproperties_microboone.fcl  evdservices_microboone.fcl  pmtconfig_microboone.fcl  services_microboone.fcl  services_microboone_basic.fcl  services_microboone_semi_analytical.fcl  services_microboone_simulation.fcl  services_microboone_simulation_semi_analytical.fcl
ubevt/Utilities/test/: CMakeLists.txt  SignalShapingMicroBooNETest_module.cc  sss_uboone.fcl
ups/: product_deps
